# salt

./: Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: release.yml
docs/: TODO-v1.0.md  algorithms.md  project-definition.md  security.md  usage.md
src/: error.rs  lib.rs  main.rs  output.rs
src/hasher/: argon2.rs  bcrypt.rs  classic.rs  mod.rs  pbkdf2.rs  scrypt.rs
tests/: cli_tests.rs
