[package]
name = "salt"
version = "0.1.0"
edition = "2024"
description = "A high-performance CLI tool for password hashing generation and verification."
license = "MIT"
authors = ["nykma"]
repository = "https://github.com/nykma/salt"
homepage = "https://github.com/nykma/salt"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["salt", "password", "hashing", "argon2", "bcrypt", "scrypt", "pbkdf2"]

[package.metadata.deb]
maintainer = "nykma"
section = "utils"
priority = "optional"
assets = [
    ["target/release/salt", "usr/bin/salt", "755"],
    ["README.md", "usr/share/doc/salt/README.md", "644"],
]

[package.metadata.generate-rpm]
release = "1"
vendor = "nykma"
assets = [
    { source = "target/release/salt", dest = "/usr/bin/salt", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/salt/README.md", mode = "644", doc = true },
    { source = "LICENSE", dest = "/usr/share/licenses/salt/LICENSE", mode = "644", doc = true },
    { source = "docs/*.md", dest = "/usr/share/doc/salt/", mode = "644", doc = true },
]

[dependencies]
anyhow = "1.0.102"
argon2 = "0.5.3"
bcrypt = "0.19.0"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
md5 = "0.8.0"
pbkdf2 = { version = "0.12.2", features = ["simple"] }
rand = "0.10.0"
scrypt = { version = "0.11.0", features = ["password-hash"] }
rpassword = "7.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
password-hash = "0.5.0"
thiserror = "2.0.18"
